Thu Jun 07 01:40:43 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Jun 06 15:45:33 BST 2007  Olly Betts <olly@survex.com>

	* docs/scriptindex.txt: Document that you can delete a document by
	  giving a new document which only contains the unique term.

Mon Jun 04 16:40:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Makefile.am: Only add manpages to dist_man_MANS if we're not in
	  maintainer mode with documentation generation turned off.

Thu May 31 20:02:16 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 31 19:16:37 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Relax automake requirement to 1.9.2 to allow RPM
	  building on RHEL 4.

Wed May 30 14:42:40 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update for changes since 1.0.0.  Removed unused subheading
	  in 1.0.0 changes.

Wed May 30 10:24:57 BST 2007  Olly Betts <olly@survex.com>

	* query.cc: Fix handling of query parsing errors (broken by changes in
	  1.0.0).

Tue May 29 01:19:21 BST 2007  Olly Betts <olly@survex.com>

	* docs/overview.txt: We no longer use pstotext for PostScript, but
	  instead use ps2pdf followed by pdftotext, so update the docs to
	  reflect this.

Fri May 18 03:36:28 BST 2007  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,myhtmlparse.cc: Fix bug in HTML parser - if the
	  text between tags consisted entirely of whitespace it would just be
	  ignored which could run words together.  Add regression test, plus
	  another test for other whitespace handling.

Thu May 17 22:27:47 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Final update before release.

Thu May 17 20:48:25 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 17 20:46:43 BST 2007  Olly Betts <olly@survex.com>

	* docs/termprefixes.txt: Update to include 'Z' prefix and mention
	  that 'R' and 'W' aren't used by Xapian now.

Thu May 17 19:11:04 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Bump version to 1.0.0.
