@@ -1,3 +1,12 @@
+Sat Jun 09 15:20:25 BST 2007  Olly Betts <olly@survex.com>
+
+	* Makefile.am,diritor.cc,diritor.h,omindex.cc: Under Linux (at least)
+	  struct dirent can tell us the type of a directory entry for some
+	  filing systems, so make use of this to avoid calling stat() (or
+	  lstat()) unnecessarily - when indexing /usr/share/doc on my Linux
+	  box, this saves about 14000 explicit calls to stat (leaving about
+	  7000).
+
 Thu Jun 07 01:40:43 BST 2007  Olly Betts <olly@survex.com>
 
 	* NEWS: Update.
